Improved the crustify config quite a lot. Should perhaps move this into the chaos repo since it's really the "new chaos style" we are talking about.

--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -156,7 +156,7 @@ indent_sing_line_comments                = 0        # number
 
 # If set, will indent trailing single line ('//') comments relative
 # to the code instead of trying to keep the same absolute column
-indent_relative_single_line_comments     = false    # false/true
+indent_relative_single_line_comments     = true    # false/true
 
 # Spaces to indent 'case' from 'switch'
 # Usually 0 or indent_columns.
@@ -172,7 +172,7 @@ indent_case_shift                        = 0        # number
 indent_case_brace                        = 0        # number
 
 # Whether to indent comments found in first column
-indent_col1_comment                      = false    # false/true
+indent_col1_comment                      = true    # false/true
 
 # How to indent goto labels
 #  >0 : absolute column where 1 is the leftmost column
@@ -455,7 +455,7 @@ sp_sizeof_paren                          = ignore   # ignore/add/remove/force
 sp_after_tag                             = ignore   # ignore/add/remove/force
 
 # Add or remove space inside enum '{' and '}'
-sp_inside_braces_enum                    = ignore   # ignore/add/remove/force
+sp_inside_braces_enum                    = add   # ignore/add/remove/force
 
 # Add or remove space inside struct/union '{' and '}'
 sp_inside_braces_struct                  = ignore   # ignore/add/remove/force
@@ -962,13 +962,13 @@ nl_var_def_blk_in                        = 0        # number
 nl_fcall_brace                           = ignore   # ignore/add/remove/force
 
 # Add or remove newline between 'enum' and '{'
-nl_enum_brace                            = ignore   # ignore/add/remove/force
+nl_enum_brace                            = add   # ignore/add/remove/force
 
 # Add or remove newline between 'struct and '{'
-nl_struct_brace                          = ignore   # ignore/add/remove/force
+nl_struct_brace                          = add   # ignore/add/remove/force
 
 # Add or remove newline between 'union' and '{'
-nl_union_brace                           = ignore   # ignore/add/remove/force
+nl_union_brace                           = add   # ignore/add/remove/force
 
 # Add or remove newline between 'if' and '{'
 nl_if_brace                              = ignore   # ignore/add/remove/force
@@ -1272,7 +1272,7 @@ ls_code_width                            = false    # false/true
 #
 
 # The maximum consecutive newlines
-nl_max                                   = 0        # number
+nl_max                                   = 0        # number, 0 = no max
 
 # The number of newlines after a function prototype, if followed by another function prototype
 nl_after_func_proto                      = 0        # number
@@ -1295,14 +1295,14 @@ nl_before_block_comment                  = 0        # number
 
 # The minimum number of newlines before a single-line C comment.
 # Doesn't apply if after a brace open or other single-line C comments.
-nl_before_c_comment                      = 0        # number
+nl_before_c_comment                      = 1        # number
 
 # The minimum number of newlines before a CPP comment.
 # Doesn't apply if after a brace open or other CPP comments.
-nl_before_cpp_comment                    = 0        # number
+nl_before_cpp_comment                    = 2        # number
 
 # Whether to force a newline after a multi-line comment.
-nl_after_multiline_comment               = false    # false/true
+nl_after_multiline_comment               = true    # false/true
 
 # The number of newlines after '}' or ';' of a struct/enum/union definition
 nl_after_struct                          = 0        # number
@@ -1348,10 +1348,10 @@ eat_blanks_before_close_brace            = false    # false/true
 # 0: No change
 # 1: Remove most newlines not handled by other config
 # 2: Remove all newlines and reformat completely by config
-nl_remove_extra_newlines                 = 0        # number
+nl_remove_extra_newlines                 = 2        # number
 
 # Whether to put a blank line before 'return' statements, unless after an open brace.
-nl_before_return                         = false    # false/true
+nl_before_return                         = true    # false/true
 
 # Whether to put a blank line after 'return' statements, unless followed by a close brace.
 nl_after_return                          = false    # false/true
