vscode settings update.

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -6,8 +6,12 @@
     "editor.codeLens": false,
 
     // The number of spaces a tab is equal to. This setting is overriden based on the file contents when `editor.detectIndentation` is on.
-    "editor.tabSize": 2,
+    "editor.tabSize": 4,
     "editor.rulers": [132],
+
+    "[ruby]": {
+        "editor.tabSize": 2
+    },
 
     "files.exclude": {
         "**/*.js": { "when": "$(basename).ts" },
@@ -32,6 +36,9 @@
       "*.src": "json",
       "cli": "ruby",
       "*.appfactory": "json",
-      "*.manifest": "json"
-    }
-  }
+      "*.manifest": "json",
+      "*.prd": "json"
+    },
+    "editor.wordWrap": true,
+    "workbench.colorTheme": "One Monokai"
+}
