More words in dictionary.

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -43,35 +43,37 @@
     },
     "editor.wordWrap": true,
     "cSpell.userWords": [
-      "virtualized",
-      "babysteps",
-      "favourite",
-      "virtio",
-      "struct",
-      "changelog",
-      "Silverlight",
-      "uxfactory",
-      "backend",
-      "fieldops",
-      "nginx",
-      "ecraft",
-      "spendrups",
-      "appfactory",
-      "workerd",
-      "prepended",
-      "crontab",
-      "passthrough",
-      "Testem",
-      "mixins",
-      "jsonapi",
-      "Postgres",
-      "Gemfile",
-      "JDBC",
-      "htmlbars",
-      "qunit",
-      "precompile"
+        "virtualized",
+        "babysteps",
+        "favourite",
+        "virtio",
+        "struct",
+        "changelog",
+        "Silverlight",
+        "uxfactory",
+        "backend",
+        "fieldops",
+        "nginx",
+        "ecraft",
+        "spendrups",
+        "appfactory",
+        "workerd",
+        "prepended",
+        "crontab",
+        "passthrough",
+        "Testem",
+        "mixins",
+        "jsonapi",
+        "Postgres",
+        "Gemfile",
+        "JDBC",
+        "htmlbars",
+        "qunit",
+        "precompile",
+        "couchdb"
     ],
     "search.useRipgrep": true,
     "workbench.iconTheme": "file-icons",
-    "workbench.colorTheme": "Pastels_on_Dark"
+    "workbench.colorTheme": "Pastels_on_Dark",
+    "workbench.activityBar.visible": true
 }
