--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -6,7 +6,7 @@
     "editor.codeLens": false,
     "editor.multiCursorModifier": "ctrlCmd",
 
-    // The number of spaces a tab is equal to. This setting is overriden based on the file contents when `editor.detectIndentation` is on.
+    // The number of spaces a tab is equal to. This setting is overridden based on the file contents when `editor.detectIndentation` is on.
     "editor.tabSize": 2,
     "editor.rulers": [132],
 
@@ -54,34 +54,39 @@
     },
     "editor.wordWrap": true,
     "cSpell.userWords": [
-        "virtualized",
-        "babysteps",
-        "favourite",
-        "virtio",
-        "struct",
-        "changelog",
         "Silverlight",
-        "uxfactory",
-        "backend",
-        "fieldops",
-        "nginx",
-        "ecraft",
-        "spendrups",
-        "appfactory",
-        "workerd",
-        "prepended",
-        "crontab",
-        "passthrough",
         "Testem",
-        "mixins",
-        "jsonapi",
-        "Postgres",
-        "Gemfile",
-        "JDBC",
+        "appfactory",
+        "autoinject",
+        "babysteps",
+        "backend",
+        "changelog",
+        "couchdb",
+        "crontab",
+        "ecraft",
+        "favourite",
+        "fieldops",
         "htmlbars",
-        "qunit",
+        "intellisense",
+        "jsonapi",
+        "mixins",
+        "nginx",
+        "passthrough",
+        "postgresql",
         "precompile",
-        "couchdb"
+        "prepended",
+        "qunit",
+        "retryable",
+        "spendrups",
+        "struct",
+        "textblock",
+        "textblocks",
+        "transpiler",
+        "unmanaged",
+        "uxfactory",
+        "virtio",
+        "virtualized",
+        "workerd"
     ],
     "search.useRipgrep": true,
     "workbench.iconTheme": "file-icons",
