Added more words to dictionary.

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -68,6 +68,7 @@
         "Oleg",
         "Owin",
         "Postgres",
+        "Rubygems",
         "Silverlight",
         "Testem",
         "appfactory",
@@ -82,12 +83,16 @@
         "fieldops",
         "htmlbars",
         "intellisense",
+        "jhat",
         "jsonapi",
+        "jvisualvm",
+        "microservice",
         "mixins",
         "nginx",
         "passthrough",
         "postgresql",
         "precompile",
+        "prepend",
         "prepended",
         "qunit",
         "retryable",
