Added more words to dictionary.

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -67,6 +67,7 @@
         "Arcieri",
         "Gemfile",
         "JDBC",
+        "MSYS",
         "Matz",
         "Owin",
         "Postgres",
@@ -87,6 +88,7 @@
         "jsonapi",
         "mixins",
         "nginx",
+        "pacman",
         "passthrough",
         "postgresql",
         "precompile",
