--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -69,6 +69,7 @@
         "JDBC",
         "MSYS",
         "Matz",
+        "NOTIME",
         "Owin",
         "Postgres",
         "Silverlight",
