vscode: Updated local dictionary wordlist

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -67,10 +67,12 @@
         "Gemfile",
         "JDBC",
         "Lundberg",
-        "Matz",
         "MSYS",
+        "Matz",
         "NOTIME",
+        "Npgsql",
         "Owin",
+        "Postgre",
         "Postgres",
         "Silverlight",
         "Testem",
@@ -105,6 +107,7 @@
         "textblock",
         "textblocks",
         "transpiler",
+        "trello",
         "uncommented",
         "unmanaged",
         "uxfactory",
