Added more spell-check words

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -65,16 +65,25 @@
       "*.prd": "json"
     },
     "editor.wordWrap": true,
+
+    // Display the spell checker status on the status bar.
+    "cSpell.showStatus": false,
+
     "cSpell.userWords": [
         "Arcieri",
+        "BSON",
+        "ENVVARSDOCS",
         "Gemfile",
         "JDBC",
+        "Loggable",
         "Lundberg",
         "MSYS",
         "Matz",
+        "Mixlib",
         "NOTIME",
         "Npgsql",
         "Owin",
+        "PREPEND",
         "Postgre",
         "Postgres",
         "Silverlight",
@@ -84,10 +93,12 @@
         "autoinject",
         "babysteps",
         "backend",
+        "backtrace",
         "changelog",
         "couchdb",
         "crontab",
         "deallocation",
+        "downcase",
         "dylib",
         "ecraft",
         "favourite",
@@ -106,10 +117,14 @@
         "prepended",
         "qunit",
         "retryable",
+        "rstrip",
         "spendrups",
+        "strftime",
         "struct",
+        "syslog",
         "textblock",
         "textblocks",
+        "timestamps",
         "transpiler",
         "trello",
         "uncommented",
@@ -140,5 +155,34 @@
     },
     "gitlens.keymap": "alternate",
     "workbench.editor.enablePreview": false,
-    "workbench.statusBar.visible": true
+    "workbench.statusBar.visible": true,
+    "cSpell.enabledLanguageIds": [
+        "c",
+        "cpp",
+        "csharp",
+        "css",
+        "go",
+        "handlebars",
+        "html",
+        "jade",
+        "javascript",
+        "javascriptreact",
+        "json",
+        "latex",
+        "less",
+        "markdown",
+        "php",
+        "plaintext",
+        "pub",
+        "python",
+        "restructuredtext",
+        "ruby",
+        "rust",
+        "scss",
+        "text",
+        "typescript",
+        "typescriptreact",
+        "yml"
+    ],
+    "git.ignoreMissingGitWarning": true
 }
