More CSpell words, change theme

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -69,93 +69,7 @@
     // Display the spell checker status on the status bar.
     "cSpell.showStatus": false,
 
-    "cSpell.userWords": [
-        "Arcieri",
-        "BSON",
-        "ENVVARSDOCS",
-        "Gemfile",
-        "JDBC",
-        "Loggable",
-        "Lundberg",
-        "MSYS",
-        "Matz",
-        "Mixlib",
-        "NOTIME",
-        "Npgsql",
-        "Owin",
-        "PREPEND",
-        "Postgre",
-        "Postgres",
-        "Silverlight",
-        "Testem",
-        "Uncomment",
-        "appfactory",
-        "autoinject",
-        "babysteps",
-        "backend",
-        "backtrace",
-        "changelog",
-        "couchdb",
-        "crontab",
-        "deallocation",
-        "downcase",
-        "dylib",
-        "ecraft",
-        "favourite",
-        "fieldops",
-        "getpid",
-        "htmlbars",
-        "intellisense",
-        "jsonapi",
-        "mixins",
-        "mutex",
-        "nginx",
-        "pacman",
-        "passthrough",
-        "postgresql",
-        "precompile",
-        "prepended",
-        "qunit",
-        "retryable",
-        "rstrip",
-        "spendrups",
-        "strftime",
-        "struct",
-        "syslog",
-        "textblock",
-        "textblocks",
-        "timestamps",
-        "transpiler",
-        "trello",
-        "uncommented",
-        "unmanaged",
-        "uxfactory",
-        "virtio",
-        "virtualized",
-        "workerd"
-    ],
-    "search.useRipgrep": true,
-    "workbench.iconTheme": "file-icons",
-    "workbench.activityBar.visible": true,
-    "ruby.rubocop.executePath": "bin/",
-    "editor.renderWhitespace": "all",
-    "[java]": {
-    },
-    "C_Cpp.intelliSenseEngine": "Default",
-    "workbench.colorTheme": "Hopscotch",
-    "workbench.editor.showTabs": true,
-    "gitlens.advanced.messages": {
-        "suppressCommitHasNoPreviousCommitWarning": false,
-        "suppressCommitNotFoundWarning": false,
-        "suppressFileNotUnderSourceControlWarning": false,
-        "suppressGitVersionWarning": false,
-        "suppressLineUncommittedWarning": true,
-        "suppressNoRepositoryWarning": false,
-        "suppressResultsExplorerNotice": false
-    },
-    "gitlens.keymap": "alternate",
-    "workbench.editor.enablePreview": false,
-    "workbench.statusBar.visible": true,
+    "cSpell.allowCompoundWords": true,
     "cSpell.enabledLanguageIds": [
         "c",
         "cpp",
@@ -184,5 +98,102 @@
         "typescriptreact",
         "yml"
     ],
+
+    "cSpell.userWords": [
+        "Arcieri",
+        "BSON",
+        "Cors",
+        "ENVVARSDOCS",
+        "Gemfile",
+        "JDBC",
+        "Loggable",
+        "Lundberg",
+        "MSYS",
+        "Matz",
+        "Mixlib",
+        "NOTIME",
+        "Noindex",
+        "Npgsql",
+        "Owin",
+        "PREPEND",
+        "Postgre",
+        "Postgres",
+        "Silverlight",
+        "Testem",
+        "Uncomment",
+        "appfactory",
+        "autoinject",
+        "babysteps",
+        "backend",
+        "backtrace",
+        "changelog",
+        "chdir",
+        "couchdb",
+        "crontab",
+        "deallocation",
+        "downcase",
+        "dylib",
+        "ecraft",
+        "eval",
+        "favourite",
+        "fieldops",
+        "getpid",
+        "htmlbars",
+        "intellisense",
+        "jsonapi",
+        "klass",
+        "mixins",
+        "mtime",
+        "mutex",
+        "nginx",
+        "pacman",
+        "passthrough",
+        "postgresql",
+        "precompile",
+        "prepended",
+        "qunit",
+        "retryable",
+        "rspec",
+        "rstrip",
+        "rubocop",
+        "spendrups",
+        "strftime",
+        "struct",
+        "syslog",
+        "textblock",
+        "textblocks",
+        "timestamps",
+        "transpiler",
+        "trello",
+        "uncommented",
+        "unmanaged",
+        "uxfactory",
+        "virtio",
+        "virtualized",
+        "workerd"
+    ],
+    "search.useRipgrep": true,
+    "workbench.iconTheme": "file-icons",
+    "workbench.activityBar.visible": true,
+    "ruby.rubocop.executePath": "bin/",
+    "editor.renderWhitespace": "all",
+    "[java]": {
+    },
+    "C_Cpp.intelliSenseEngine": "Default",
+    "workbench.colorTheme": "Adapta Nokto",
+    "workbench.editor.showTabs": true,
+    "gitlens.advanced.messages": {
+        "suppressCommitHasNoPreviousCommitWarning": false,
+        "suppressCommitNotFoundWarning": false,
+        "suppressFileNotUnderSourceControlWarning": false,
+        "suppressGitVersionWarning": false,
+        "suppressLineUncommittedWarning": true,
+        "suppressNoRepositoryWarning": false,
+        "suppressResultsExplorerNotice": false,
+        "suppressShowKeyBindingsNotice": true
+    },
+    "gitlens.keymap": "chorded",
+    "workbench.editor.enablePreview": false,
+    "workbench.statusBar.visible": true,
     "git.ignoreMissingGitWarning": true
 }
