vscode: Updated files.associations
This makes VSCode auto-select file types for various files, which
is nice and useful.

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -56,13 +56,16 @@
     "gitlens.currentLine.enabled": false,
 
     "files.associations": {
-      "*.local": "json",
-      "*.config": "json",
-      "*.src": "json",
+      ".env.*": "dotenv",
+      "*.local": "jsonc",
+      "app.config*": "jsonc",
       "cli": "ruby",
       "*.appfactory": "json",
       "*.manifest": "json",
-      "*.prd": "json"
+      "*.prd": "json",
+      "Dockerfile*": "dockerfile",
+      "workerd.*": "erb",
+      "workerd.rb": "ruby"
     },
     "editor.wordWrap": true,
 
