vscode: Updated spell checker wordlist

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -106,32 +106,49 @@
     "cSpell.userWords": [
         "Arcieri",
         "BSON",
+        "CHLD",
         "Cors",
+        "Dashevskii's",
+        "EADDRINUSE",
+        "ECONNREFUSED",
         "ENVVARSDOCS",
+        "ESRCH",
+        "Errno",
         "Gemfile",
+        "HTTPOK",
         "JDBC",
         "Loggable",
         "Lundberg",
         "MSYS",
         "Matz",
+        "Memoized",
         "Mixlib",
         "NOTIME",
         "Noindex",
         "Npgsql",
+        "Oleg",
         "Owin",
         "PREPEND",
         "Postgre",
         "Postgres",
+        "Rubo",
+        "SIGKILL",
+        "SIGTERM",
         "Silverlight",
+        "Sverige",
         "Testem",
         "Uncomment",
+        "WNOHANG",
         "appfactory",
+        "arity",
         "autoinject",
         "babysteps",
         "backend",
         "backtrace",
+        "camelize",
         "changelog",
         "chdir",
+        "conditionalize",
         "couchdb",
         "crontab",
         "deallocation",
@@ -139,27 +156,42 @@
         "dylib",
         "ecraft",
         "eval",
+        "executables",
         "favourite",
         "fieldops",
+        "getpgid",
         "getpid",
+        "graphql",
         "htmlbars",
         "intellisense",
+        "ironmq",
+        "javax",
+        "jcmd",
         "jsonapi",
         "klass",
         "mixins",
         "mtime",
         "mutex",
         "nginx",
+        "ostruct",
         "pacman",
         "passthrough",
+        "pids",
         "postgresql",
         "precompile",
         "prepended",
+        "printf",
+        "progname",
         "qunit",
+        "rackup",
+        "repo",
         "retryable",
+        "rindex",
         "rspec",
         "rstrip",
+        "rtrim",
         "rubocop",
+        "sigchild",
         "spendrups",
         "strftime",
         "struct",
@@ -171,9 +203,11 @@
         "trello",
         "uncommented",
         "unmanaged",
+        "unshift",
         "uxfactory",
         "virtio",
         "virtualized",
+        "waitpid",
         "workerd"
     ],
     "search.useRipgrep": true,
