vscode: Updated spell checker wordlist

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -125,6 +125,7 @@
         "MSYS",
         "Matz",
         "Memoized",
+        "Micael",
         "Mixlib",
         "NOTIME",
         "Noindex",
@@ -148,6 +149,7 @@
         "babysteps",
         "backend",
         "backtrace",
+        "besökelsetid",
         "camelize",
         "changelog",
         "chdir",
@@ -165,6 +167,7 @@
         "getpgid",
         "getpid",
         "graphql",
+        "hjärtesorg",
         "htmlbars",
         "intellisense",
         "ironmq",
@@ -172,6 +175,7 @@
         "jcmd",
         "jsonapi",
         "klass",
+        "lakto",
         "mixins",
         "mtime",
         "mutex",
@@ -180,6 +184,7 @@
         "pacman",
         "passthrough",
         "pids",
+        "pescetarian",
         "postgresql",
         "precompile",
         "prepended",
