vscode: Add more words

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -196,8 +196,8 @@
         "ostruct",
         "pacman",
         "passthrough",
-        "pids",
         "pescetarian",
+        "pids",
         "plundberg",
         "postgresql",
         "precompile",
@@ -231,6 +231,7 @@
         "unencrypted",
         "unmanaged",
         "unshift",
+        "uuid",
         "uxfactory",
         "virtio",
         "virtualized",
