vscode: Use 2 spaces for certain file formats

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -18,11 +18,19 @@
 
     "html.autoClosingTags": false,
 
+    "[coffeescript]": {
+        "editor.tabSize": 2
+    },
+
     "[gemfile]": {
         "editor.tabSize": 2
     },
 
     "[ruby]": {
+        "editor.tabSize": 2
+    },
+
+    "[shellscript]": {
         "editor.tabSize": 2
     },
 
